--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="menu">
-                <a href="#" class="active">메뉴</a>
-                <a href="#"><img src="" alt=""></a>
-            </div>
-            <a href="#">소개</a>
-            <a href="#">웹 디자인</a>
-            <a href="#">상세페이지 디자인</a>
-            <a href="#">sns 디자인</a>
-        </nav>
+        <div class="menu_wrap">
+            <nav>
+                <div class="menu">
+                    <a href="#" class="active">메뉴</a>
+                    <a href="#"><img src="./images/add_2.png" alt=""></a>
+                </div>
+                <p><a href="#">소개</a></p>
+                <p><a href="#">웹 디자인</a></p>
+                <p><a href="#">상세페이지 디자인</a></p>
+                <p><a href="#">SNS 디자인</a></p>
+            </nav>
+        </div>
+        
     </header>
     <main>
         <div class="wrap">
@@ -76,14 +79,14 @@
                         <h3>Experience</h3>
                     </div>
                     <div class="right">
-                        <p><img src="" alt=""></p>
-                        <p><img src="" alt=""></p>
-                        <p><img src="" alt=""></p>
-                        <p><img src="" alt=""></p>
-                        <p><img src="" alt=""></p>
-                        <p><img src="" alt=""></p>
-                        <p><img src="" alt=""></p>
-                        <p><img src="" alt=""></p>
+                        <p><img src="./images/skill_001.png" alt=""></p>
+                        <p><img src="./images/skill_002.png" alt=""></p>
+                        <p><img src="./images/skill_003.png" alt=""></p>
+                        <p><img src="./images/skill_004.png" alt=""></p>
+                        <p><img src="./images/skill_005.png" alt=""></p>
+                        <p><img src="./images/skill_006.png" alt=""></p>
+                        <p><img src="./images/skill_007.png" alt=""></p>
+                        <p><img src="./images/skill_008.png" alt=""></p>
                     </div>
                 </div>
             </div>
