--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div class="menu_wrap">
-            <nav>
+                <nav>
                 <div class="menu">
                     <a href="#" class="active">메뉴</a>
                     <a href="#"><img src="./images/add_2.png" alt=""></a>
@@ -40,7 +40,7 @@
             <div class="main_bg">
                 <video src="./images/main_video.mp4" autoplay muted  ></video> <!--loop!-->
                 <div class="main_text">
-                    <p>2025 PORTFOLO</p>
+                    <p>2025 PORTFOLIO</p>
                     <p>song .D</p>
                     <p>자유롭게,   유연하게,  대담하게</p>
                     <p>도전을 두려워하지않는 디자이너 송지연입니다</p>
@@ -97,66 +97,74 @@
                     <div class="swiper web">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide web1">
-                                <div class="left_poto"> <img src="" alt=""></div>
-                                <div class="right_text">
-                                    <h1> 크레모아 (반응형 웹) </h1>
-                                    <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
-                                    <p>제작 기간 </p>
-                                    <p>2025.1.23- 2025.2.9  (평일  수업 병행)</p>
-                                    <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
-                                    <p>기여도 : 100% </p>
-                                    <div class="btn">
-                                        <a href="#" target="_blank">리디자인 결과</a>
-                                        <a href="#" target="_blank">기획 보기</a>
-                                        <a href="#" target="_blank">원본 보기</a>
+                                <div class="slid">
+                                    <div class="left_poto"> <img src="./images/clatmore_001.png" alt=""></div>
+                                    <div class="right_text">
+                                        <h1> 크레모아 (반응형 웹) </h1>
+                                        <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
+                                        <p>제작 기간 </p>
+                                        <p>2025.1.23- 2025.2.9  (평일  수업 병행)</p>
+                                        <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
+                                        <p>기여도 : 100% </p>
+                                        <div class="btn">
+                                            <a href="#" target="_blank">리디자인 결과</a>
+                                            <a href="#" target="_blank">기획 보기</a>
+                                            <a href="#" target="_blank">원본 보기</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide web2">
-                                <div class="left_poto"> <img src="" alt=""></div>
-                                <div class="right_text">
-                                    <h1> 이니스프리 (반응형 웹) </h1>
-                                    <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
-                                    <p>제작 기간 </p>
-                                    <p>2025.1.23- 2025.2.9  (평일  수업 병행)</p>
-                                    <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
-                                    <p>기여도 : 100% </p>
-                                    <div class="btn">
-                                        <a href="#" target="_blank">리디자인 결과</a>
-                                        <a href="#" target="_blank">기획 보기</a>
-                                        <a href="#" target="_blank">원본 보기</a>
+                            <div class="swiper-slide web1">
+                                <div class="slid">
+                                    <div class="left_poto"> <img src="./images/clatmore_001.png" alt=""></div>
+                                    <div class="right_text">
+                                        <h1> 이니스프리 </h1>
+                                        <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
+                                        <p>제작 기간 </p>
+                                        <p>2025.1.23- 2025.2.9  (평일  수업 병행)</p>
+                                        <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
+                                        <p>기여도 : 100% </p>
+                                        <div class="btn">
+                                            <a href="#" target="_blank">리디자인 결과</a>
+                                            <a href="#" target="_blank">기획 보기</a>
+                                            <a href="#" target="_blank">원본 보기</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide web3">
-                                <div class="left_poto"> <img src="" alt=""></div>
-                                <div class="right_text">
-                                    <h1> 오버랩 (반응형 웹) </h1>
-                                    <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
-                                    <p>제작 기간 </p>
-                                    <p>2025.1.23- 2025.2.9  (평일  수업 병행)</p>
-                                    <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
-                                    <p>기여도 : 100% </p>
-                                    <div class="btn">
-                                        <a href="#" target="_blank">리디자인 결과</a>
-                                        <a href="#" target="_blank">기획 보기</a>
-                                        <a href="#" target="_blank">원본 보기</a>
+                            <div class="swiper-slide web1">
+                                <div class="slid">
+                                    <div class="left_poto"> <img src="./images/clatmore_001.png" alt=""></div>
+                                    <div class="right_text">
+                                        <h1> 오버랩</h1>
+                                        <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
+                                        <p>제작 기간 </p>
+                                        <p>2025.1.23- 2025.2.9  (평일  수업 병행)</p>
+                                        <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
+                                        <p>기여도 : 100% </p>
+                                        <div class="btn">
+                                            <a href="#" target="_blank">리디자인 결과</a>
+                                            <a href="#" target="_blank">기획 보기</a>
+                                            <a href="#" target="_blank">원본 보기</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper-slide web4">
-                                <div class="left_poto"> <img src="" alt=""></div>
-                                <div class="right_text">
-                                    <h1> 인스파이어 </h1>
-                                    <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
-                                    <p>제작 기간 </p>
-                                    <p>2025.1.23- 2025.2.9  (평일  수업 병행)</p>
-                                    <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
-                                    <p>기여도 : 100% </p>
-                                    <div class="btn">
-                                        <a href="#" target="_blank">리디자인 결과</a>
-                                        <a href="#" target="_blank">기획 보기</a>
-                                        <a href="#" target="_blank">원본 보기</a>
+                            <div class="swiper-slide web1">
+                                <div class="slid">
+                                    <div class="left_poto"> <img src="./images/clatmore_001.png" alt=""></div>
+                                    <div class="right_text">
+                                        <h1> 인스파이어 </h1>
+                                        <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
+                                        <p>제작 기간 </p>
+                                        <p>2025.1.23- 2025.2.9  (평일  수업 병행)</p>
+                                        <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
+                                        <p>기여도 : 100% </p>
+                                        <div class="btn">
+                                            <a href="#" target="_blank">리디자인 결과</a>
+                                            <a href="#" target="_blank">기획 보기</a>
+                                            <a href="#" target="_blank">원본 보기</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -167,26 +175,30 @@
             </div>
             <!-- 디자인 프로젝트 소개 -->
             <div class="swiper-slide" id="project2">
-                <h2 class="title">Design Project</h2>
-                <div class="contents" title="클릭 시 크게 보실 수 있어요">
-                    <div class="left_design">
-                        <div class="swiper design1 snsDetail">
+                <div class="title">
+                    <h2>Design Project</h2>
+                </div>
+                <div class="contents" title="클릭 시 크게 보실 수 있어요!">
+                    <div class="left">
+                       
+                        <div class="swiper design2 snsDetail">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide de1"><img src="./project/sns/sns1.jpg" alt=""></div>
-                                <div class="swiper-slide de1"><img src="./project/sns/sns1.jpg" alt=""></div>
-                                <div class="swiper-slide de1"><img src="./project/sns/sns1.jpg" alt=""></div>
-                                <div class="swiper-slide de1"><img src="./project/sns/sns1.jpg" alt=""></div>
+                                <div class="swiper-slide de2"><img src="./project/sns/sns2.jpg" alt=""></div>
+                                <div class="swiper-slide de3"><img src="./project/sns/sns3.jpg" alt=""></div>
+                                <div class="swiper-slide de4"><img src="./project/sns/sns2.jpg" alt=""></div>
                             </div>
                         </div>
-                        <div class="swiper design2 banner">
+                        <div class="swiper design1 banner">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide de1"><img src="./project/banner/banner1.jpg" alt=""></div>
-                                <div class="swiper-slide de1"><img src="./project/banner/banner1.jpg" alt=""></div>
-                                <div class="swiper-slide de1"><img src="./project/banner/banner1.jpg" alt=""></div>
-                                <div class="swiper-slide de1"><img src="./project/banner/banner1.jpg" alt=""></div>
+                                <div class="swiper-slide de2"><img src="./project/banner/banner2.jpg" alt=""></div>
+                                <div class="swiper-slide de3"><img src="./project/banner/banner3.jpg" alt=""></div>
+                                <div class="swiper-slide de4"><img src="./project/banner/banner4.jpg" alt=""></div>
                             </div>
-                        </div> 
-                    <div class="right_design">
+                        </div>
+                    </div>
+                    <div class="design3_set">
                         <div class="swiper design3 snsDetail">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide de1"><img src="./project/detail/detail1.jpg" alt=""></div>
@@ -194,14 +206,14 @@
                                 <div class="swiper-slide de3"><img src="./project/detail/detail3.jpg" alt=""></div>
                                 <div class="swiper-slide de4"><img src="./project/detail/detail4.jpg" alt=""></div>
                             </div>
-                            <!-- 디자인 프로젝트 팝업 -->
-                            <div class="swiper-pagination"></div>
-                            <div class="popup_bg" title="클릭하면 닫혀요">
-                                <div class="popup"><img src="./project/detail/detail1.jpg" alt=""></div>
-                            </div>
                         </div>
+                        <div class="swiper-pagination"></div>
                     </div>
-                </div>  
+                    <!-- 디자인 프로젝트 팝업 -->
+                    <div class="popup_bg" title="클릭하면 닫혀요">
+                        <div class="popup"><img src="./project/detail/detail1.jpg" alt=""></div>
+                    </div>
+                </div><!-- contents end -->
             </div>
         </div>
     </main>
