--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
 <body>
     <header>
         <div class="menu_wrap">
-                <nav>
+            <nav>
                 <div class="menu">
                     <a href="#" class="active">메뉴</a>
                     <a href="#"><img src="./images/add_2.png" alt=""></a>
                 </div>
-                <p><a href="#">소개</a></p>
-                <p><a href="#">웹 디자인</a></p>
-                <p><a href="#">상세페이지 디자인</a></p>
-                <p><a href="#">SNS 디자인</a></p>
-            </nav>
-        </div>
-        
+                <p><a href="#profile">소개</a></p>
+                <p><a href="#project1">웹 디자인</a></p>
+                <p><a href="#project2">상세페이지 디자인</a></p>
+                <p><a href="#project2">SNS 디자인</a></p>
+        </nav>
+    </div>
     </header>
     <main>
         <div class="wrap">
@@ -47,7 +46,7 @@
                 </div>
             </div>
             <!-- 프로필 -->
-            <div class="profile">
+            <div class="profile" id="profile">
                 <h2 class="title">Web Designer &  Publisher</h2>
                 <div class="contents">
                     <div class="left">
@@ -98,7 +97,7 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide web1">
                                 <div class="slid">
-                                    <div class="left_poto"> <img src="./images/clatmore_001.png" alt=""></div>
+                                    <div class="left_poto"> <img src="./images/267shots_so.png" alt=""></div>
                                     <div class="right_text">
                                         <h1> 크레모아 (반응형 웹) </h1>
                                         <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
@@ -107,7 +106,7 @@
                                         <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
                                         <p>기여도 : 100% </p>
                                         <div class="btn">
-                                            <a href="#" target="_blank">리디자인 결과</a>
+                                            <a href="#" target="_blank">프로토타입 결과</a>
                                             <a href="#" target="_blank">기획 보기</a>
                                             <a href="#" target="_blank">원본 보기</a>
                                         </div>
@@ -116,7 +115,7 @@
                             </div>
                             <div class="swiper-slide web1">
                                 <div class="slid">
-                                    <div class="left_poto"> <img src="./images/clatmore_001.png" alt=""></div>
+                                    <div class="left_poto"> <img src="./images/267shots_so.png" alt=""></div>
                                     <div class="right_text">
                                         <h1> 이니스프리 </h1>
                                         <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
@@ -125,7 +124,7 @@
                                         <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
                                         <p>기여도 : 100% </p>
                                         <div class="btn">
-                                            <a href="#" target="_blank">리디자인 결과</a>
+                                            <a href="#" target="_blank">프로토타입 결과</a>
                                             <a href="#" target="_blank">기획 보기</a>
                                             <a href="#" target="_blank">원본 보기</a>
                                         </div>
@@ -134,7 +133,7 @@
                             </div>
                             <div class="swiper-slide web1">
                                 <div class="slid">
-                                    <div class="left_poto"> <img src="./images/clatmore_001.png" alt=""></div>
+                                    <div class="left_poto"> <img src="./images/267shots_so.png" alt=""></div>
                                     <div class="right_text">
                                         <h1> 오버랩</h1>
                                         <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
@@ -143,7 +142,7 @@
                                         <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
                                         <p>기여도 : 100% </p>
                                         <div class="btn">
-                                            <a href="#" target="_blank">리디자인 결과</a>
+                                            <a href="#" target="_blank">프로토타입 결과</a>
                                             <a href="#" target="_blank">기획 보기</a>
                                             <a href="#" target="_blank">원본 보기</a>
                                         </div>
@@ -152,7 +151,7 @@
                             </div>
                             <div class="swiper-slide web1">
                                 <div class="slid">
-                                    <div class="left_poto"> <img src="./images/clatmore_001.png" alt=""></div>
+                                    <div class="left_poto"> <img src="./images/267shots_so.png" alt=""></div>
                                     <div class="right_text">
                                         <h1> 인스파이어 </h1>
                                         <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
@@ -161,7 +160,7 @@
                                         <p>메인페이지, 메뉴, 상품리스트, 상품주문페이지</p>
                                         <p>기여도 : 100% </p>
                                         <div class="btn">
-                                            <a href="#" target="_blank">리디자인 결과</a>
+                                            <a href="#" target="_blank">프로토타입 결과</a>
                                             <a href="#" target="_blank">기획 보기</a>
                                             <a href="#" target="_blank">원본 보기</a>
                                         </div>
@@ -180,7 +179,6 @@
                 </div>
                 <div class="contents" title="클릭 시 크게 보실 수 있어요!">
                     <div class="left">
-                       
                         <div class="swiper design2 snsDetail">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide de1"><img src="./project/sns/sns1.jpg" alt=""></div>
