--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="menu_wrap">
             <nav>
                 <div class="menu">
-                    <a href="#" class="active">메뉴</a>
-                    <a href="#"><img src="./images/add_2.png" alt=""></a>
+                    <a href="#menu_wrap" class="active">메뉴</a>
+                    <a href="#menu_wrap"><img src="./images/add_2.png" alt="더보기"></a>
                 </div>
                 <p><a href="#profile">소개</a></p>
                 <p><a href="#project1">웹 디자인</a></p>
@@ -150,7 +150,7 @@
                                         <div class="btn">
                                             <a href="https://www.figma.com/proto/l1afj1HFWt0MTUKryUXF5t/%EC%98%A4%EB%B2%84%EB%9E%A9_%EB%A6%AC%EB%94%94%EC%9E%90%EC%9D%B8?node-id=100-2&t=aO4veN0Gl4tdWROE-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">프로토타입 결과</a>
                                             <!-- <a href="#" target="_blank">기획 보기</a> -->
-                                            <a href="#" target="https://overlab.kr/">원본 보기</a>
+                                            <a href="https://overlab.kr/" target="_blank">원본 보기</a>
                                         </div>
                                     </div>
                                 </div>
