--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <div class="slid">
                                     <div class="left_poto"> <img src="./images/267shots_so.jpg" alt=""></div>
                                     <div class="right_text">
-                                        <h1> 크레모아 (반응형 웹) </h1>
+                                        <h1> 크레모아 </h1>
                                         <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
                                         <p>제작 기간 </p>
                                         <p>2025.1.23- 2025.2.9  (총 42시간)</p>
@@ -121,7 +121,7 @@
                                 <div class="slid">
                                     <div class="left_poto"> <img src="./images/innisfree.jpg" alt=""></div>
                                     <div class="right_text">
-                                        <h1> 이니스프리 (반응형 웹) </h1>
+                                        <h1> 이니스프리(반응형 웹)</h1>
                                         <p>기존 사이트의 UX/UI 개선, 브랜드 이미지 강화</p>
                                         <p>제작 기간 </p>
                                         <p>2025.1.23- 2025.2.9  (36시간)</p>
