--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                                 <div class="swiper-slide de1"><img src="./project/detail/detail1.jpg" alt=""></div>
                                 <div class="swiper-slide de2"><img src="./project/detail/detail3.jpg" alt=""></div>
                                 <div class="swiper-slide de3"><img src="./project/detail/detail2.jpg" alt=""></div>
+                                <div class="swiper-slide de4"><img src="./project/detail/detail4.jpg" alt=""></div>
                             </div>
                         </div>
                         <div class="swiper-pagination"></div>
