--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                     </div>
                     <div class="center">
                         <p>2024.11-2025.3  UI/UX 반응형 웹디자인&웹퍼블리셔 양성과정 수료</p>
-                        <p>2024.10-2024.11  웹퍼블리싱 & 웹개발을 위한 코딩 기초온라인수업 수료</p>
+<!--                         <p>2024.10-2024.11  웹퍼블리싱 & 웹개발을 위한 코딩 기초온라인수업 수료</p> -->
                         <p>2020.6~2024.9  (주)세무법인 다승  결산및 세무신고  정직원</p>
-                        <p>2022.8~2022.8  2D그래픽(일러스트)직장인과정 수료</p>
+<!--                         <p>2022.8~2022.8  2D그래픽(일러스트)직장인과정 수료</p> -->
                         <p>2022.5~2022.6  SNS 이모티콘 직장인과정 수료</p>
-                        <p>2022.7-2022.8  네이버 쇼핑몰(스마트스토어) 판매과정 수료</p>
+<!--                         <p>2022.7-2022.8  네이버 쇼핑몰(스마트스토어) 판매과정 수료</p> -->
                         <p>2014.6-2019.12  차상식세무회계사무소  결산및 세무신고  정직원</p>
                         <p>2012.3-2014.4  이경수 세무회계사무소 결산및 세무신고  정직원</p>
                         <p>2011.2-2015.8  한국방송통신대학교 경영학과 졸업</p>
